# SourceLens

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Potential Features.md  README.md  handovernotes.md  implementation_prep.md  phase-2-implementation-plan.md  phase-5-implementation-plan.md  plan.md
backend/: README.md  pyproject.toml
backend/evals/fixtures/: golden_source.md
backend/src/source_lens_api/: __init__.py  bootstrap.py  config.py  eval_smoke.py  live_dependency_smoke.py  main.py  runtime.py
backend/src/source_lens_api/application/: __init__.py  evidence.py  imports.py  sources.py
backend/src/source_lens_api/domain/: __init__.py  models.py
backend/src/source_lens_api/domain/ports/: __init__.py  chat.py  embeddings.py  import_job_repository.py  source_repository.py  vector_store.py
backend/src/source_lens_api/evals/: __init__.py  assertions.py  cases.py  doubles.py
backend/src/source_lens_api/infra/: __init__.py
backend/src/source_lens_api/infra/ollama/: client.py
backend/src/source_lens_api/infra/qdrant/: __init__.py  vector_store.py
backend/src/source_lens_api/infra/sqlite/: __init__.py  database.py  (+1 more)
backend/src/source_lens_api/ingest/: __init__.py  chunking.py  parsing.py  text.py
backend/tests/: __init__.py  conftest.py  support.py  test_architecture_docs.py  test_bootstrap.py  test_eval_assertions.py  test_eval_smoke.py  test_evidence_gate.py  test_health.py  test_import_api.py  test_import_pipeline.py  test_live_dependency_smoke.py  test_parsing.py  test_qdrant_vector_store.py  test_source_api.py  test_sqlite_repositories.py
(+66 files in other folders)
